изменяет стоимость пакета

--- a/app/views/orders/_package_desc_2.slim
+++ b/app/views/orders/_package_desc_2.slim
@@ -1,7 +1,7 @@
 h4 Стоимость:
 p <b>31 990 <i class="fa fa-rub"></i></b> — при подаче заявки до 20 августа
-p <b>36 990 <i class="fa fa-rub"></i></b> — при подаче заявки с 21 августа по 20 сентября
-p <b>39 990 <i class="fa fa-rub"></i></b> — при подаче заявки с 21 сентября
+p <b>36 990 <i class="fa fa-rub"></i></b> — при подаче заявки с 21 августа по 10 октября
+p <b>39 990 <i class="fa fa-rub"></i></b> — при подаче заявки с 10 октября
 br
 h4 В пакет входит:
 ul
