убирает кнопка стать гостем полуфинала

--- a/app/views/shared/_about.slim
+++ b/app/views/shared/_about.slim
@@ -25,7 +25,7 @@ h1.home-title#about
   .about-row-left.about-row-left_2
     .about-text.about-text_3
       p 25 сентября в Москве, в роскошном зале отеля Korston состоится Полуфинал конкурса. Очаровательные участницы будут в красивых нарядах, а атмосфера вечера взрывной и захватывающей. Члены жюри выберут 10 восхитительных финалисток, оценивая их внешние данные, ум, находчивость и чувство юмора. А одиннадцатую участницу Финала определит зрительское голосование.
-      = link_to "Cтать гостем полуфинала", 'https://missturizm.timepad.ru/event/804723/', target: "_blank", class: "btn btn-primary btn-lg"
+      / = link_to "Cтать гостем полуфинала", 'https://missturizm.timepad.ru/event/804723/', target: "_blank", class: "btn btn-primary btn-lg"
   .about-row-right.about-row-right_2
     = image_tag(asset_pack_path('packs/img/girls-3@2x.jpg'), class: 'img-responsive')
 
