--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -25,7 +25,7 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
           - if VOTES_AVIALABLE
             button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal3" style="width: 250px;" Голосовать
         = link_to "Хочу на финал", orders_path, class: "btn btn-primary btn-lg", style: "width: 250px;margin: 16px 0 0 0"
-        = link_to "Хочу на полуфинал", 'https://missturizm.timepad.ru/event/804723/', target: "_blank", class: "btn btn-success btn-lg", style: "width: 250px;margin: 16px 0 0 0"
+        / = link_to "Хочу на полуфинал", 'https://missturizm.timepad.ru/event/804723/', target: "_blank", class: "btn btn-success btn-lg", style: "width: 250px;margin: 16px 0 0 0"
         -if true
           = link_to "Финалистки", final_path, class: "btn btn-success btn-lg", style: "width: 250px;margin: 16px 0 0 0"
 
