добавляет нового члена жюри

--- a/app/views/orders/index.slim
+++ b/app/views/orders/index.slim
@@ -9,6 +9,14 @@
 
 h1.page-header Регистрация на финал
 .order-lead Приглашаем на финал конкурса Мисс&Миссис Туризм 2018, который пройдёт с 17 по 20 октября на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5!
+br
+p В Греции нас жду три зажигательных вечера, по итогам которых наше уважаемое жюри выберет ту самую-самую, которой достанется Корона 👑 и титул "Мисс&Миссис Туризм 2018". Кроме того, сами гости выберут Мисс&Миссис Зрительских Симпатий 💫
+
+p В первый вечер, 17.10 нас ждет приветственная вечеринка, где гости и жюри смогут еще раз познакомиться с финалистками конкурса. Знакомить девушек с гостями будет наш неповторимиый Александр Снегирев (Aleksandr Snegirev). И дальше, конечно, сумасшедшая и зажигательная дискотека с любимым DJ Майкл💃
+
+p Во второй вечер,18.10 наши красавицы-финалистки поразят всех своими талантами. Поверьте, вы будете удивлены. Мы уже предвкушаем, зная лишь только какие аксессуары запросили наши участницы 😜 В завершении вечера, конечно, снова супер диско с DJ Майкл 👯‍♀️  💝
+
+p Третий день, 19.10 будет самим насыщенным! В первой половине дня пройдет конкурс Мисс Бикини 👙, а вечером нас ждет великолепный гала-ужин 🥂, объявление победительницы 💐 и церемония награждения 🎉 И, конечно, такой вечер не может пройти без выступления великолепного Антонио. В завершении, опять же, мы не можем обойтись без жарких танцев 🕺
 
 
 h2.order-subtitle Выберите вариант пакета участника
