--- a/app/views/header/_nav_links_for_auth.html.erb
+++ b/app/views/header/_nav_links_for_auth.html.erb
@@ -1,21 +1,25 @@
 <ul class="nav navbar-nav navbar-right">
+  <li>
+    <%= link_to "Фото/видео", galleries_path %>
+  </li>
   <% if request.fullpath === '/' %>
     <li>
       <%= link_to "ЖЮРИ", '#jury' %>
     </li>
   <% end %>
-  <li>
-    <%= link_to "ПАРТНЕРЫ", '#partners' %>
-  </li>
-  <li class="<%= request.fullpath === general_partner_path && 'active' %>">
-    <%= link_to "Aldemar", general_partner_path %>
-  </li>
+<!--  <li>-->
+    <%#= link_to "ПАРТНЕРЫ", '#partners' %>
+<!--  </li>-->
+<!--  <li class="<%#= request.fullpath === general_partner_path && 'active' %>">-->
+    <%#= link_to "Aldemar", general_partner_path %>
+<!--  </li>-->
   <li class="<%= request.fullpath === posts_path && 'active' %>">
     <%= link_to "Новости", posts_path %>
   </li>
-  <li>
-    <%= link_to "Правила участия", '#about', data: {toggle: "modal", target: "#myModal1"} %>
-  </li>
+
+<!--  <li>-->
+    <%#= link_to "Правила участия", '#about', data: {toggle: "modal", target: "#myModal1"} %>
+<!--  </li>-->
   <li class="<%= request.fullpath === votes_path && 'active' %>">
     <%= link_to "УЧАСТНИЦЫ", votes_path %>
   </li>
