--- a/app/views/shared/_counters.slim
+++ b/app/views/shared/_counters.slim
@@ -7,7 +7,7 @@
             = @users_all.count
           .counter-label= t('datetime.distance_in_words.profiles', count: @users_all.count, locale: :ru)
 
-      .counter
+      / .counter
         - if REGISTRATION_AVIALABLE && false
           .counter-item
             = distance_of_time_in_words_to_now(REGISTRATION_END_DATE, scope: 'datetime.distance_in_words.short')
@@ -24,7 +24,7 @@
           .counter-label
             |до проведения полуфинала
 
-        - if FINAL_AVIALABLE
+        - if FINAL_AVIALABLE && false
           .counter-item
             = distance_of_time_in_words_to_now(FINAL_END, scope: 'datetime.distance_in_words.short')
           .counter-label
